--- a/_posts/2021-03-09-zipkin.md
+++ b/_posts/2021-03-09-zipkin.md
@@ -96,6 +96,7 @@ ZipkinTracer zipkin = new ZipkinTracer();
 zipkin.setSpanReporter(AsyncReporter.create(OkHttpSender.create("http://127.0.0.1:9411/api/v2/spans")));
 zipkin.setIncludeMessageBody(true);
 zipkin.setIncludeMessageBodyStreams(true);
+   
 zipkin.init(camelContext);
 {% endhighlight %}
 
@@ -104,12 +105,12 @@ com/apache/camel-spring-boot-examples/tree/master/zipkin)에서 확인 가능하
 <br/><br/>
 
 ### 기타 모니터링 오픈소스
-추가적으로 zipkin은 [prometheus](https://prometheus.io/docs/introduction/first_steps/) 및 [grafana]
-(https://grafana.com/docs/grafana/latest/installation/)를 활용해 시각화가 가능하다.
+추가적으로 zipkin은 [prometheus](https://prometheus.io/docs/introduction/first_steps/) 및 
+[grafana](https://grafana.com/docs/grafana/latest/installation/)를 활용해 시각화가 가능하다.
 
 먼저 grafana를 기동한 후, [grafana zipkin공식문서](https://grafana.com/docs/grafana/latest/datasources/zipkin/)를 통해 
 zipkin을 datasource로 등록한다. 그리고 외부 dashboard사용을 위해 prometheus또한 설치 후 datasource로 등록한 뒤에,
 [grafana zipkin dashboard](https://grafana.com/grafana/dashboards/1598)를 import해주면 된다.
 
 글은 장황하지만 모두 생각보다 쉽게 적용 가능하다.
-해당 포스팅의 상세 내용은 차후 별도 적용해 신규 포스팅하려고 한다.
+해당 포스팅의 상세 내용은 차후 별도 적용해 신규 포스팅할 예정이다.
