--- a/_posts/2021-05-26-spring.md
+++ b/_posts/2021-05-26-spring.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "스프링"
+title:  "스프링 프레임워크"
 ---
 
 # 스프링
@@ -9,21 +9,27 @@ title:  "스프링"
 <br/><br/>
     
 
+
 ## 의존성 주입
 - 특정 클래스에서 다른 클래스에 대한 모든 의존성을 제거하고, 필요할 때만 내부로 로딩
 - 독립적인 테스트가 가능하고, 클래스 변경없이도 의존성 구현 재작성이 가능함
+<br/><br/>
+
 
 ## Spring MVC
 - Model : 작업하는 애플리케이션의 데이터
 - View: 사용자에게 보여지는 모델. 텍스트만을 사용할 수도 있고, 복잡한 시각화도 가능
 - Controller: 입력에 대해 모델이 어떻게 생성될 것인지 처리하고, 뷰에 해당 모델을 전달
+<br/><br/>
+  
 
 ## 스프링의 웹앱 제공 방법
 - 스프링mvc는 자바 서블릿 명세와 호환되도록 설계됨
 1. 웹서버를 실행하면, 스프링mvc는 클래스패스의 META-INF에서 web.xml을 찾는다.
 2. 이 때 DispatcherServlet의 구현을 사용하게 되며, 어느 경로의 요청을 DispatcherServlet클래스에 전달하는지를 정의
 3. DispatcherServlet은 application context를 찾아 로딩
-
+<br/><br/>
+   
 
 ## Spring Core
 ### IoC(Inversion of Control): 제어의 역전
@@ -33,16 +39,17 @@ title:  "스프링"
 - IoC컨테이너
     - DL(Dependency Lookup): 저장된 bean에 접근하기 위해 bean을 검색
     - DI(Dependency Injection): 각 클래스간의 의존관계를 컨테이너가 자동으로 연결. 코드가 단순해지고 컴포넌트 간 결합도제거
+<br/><br/>
+
 
 ### Aop(Aspect Oriented Programming): 관점 지향 프로그래밍
 - 공통 로직을 비즈니스 로직에서 분리하여 사용 가능
 - 중복코드 최소화.
 - Proxy를 통해 적용됨
 - EX. 멀티 데이터소스, Exception처리, transactional
-
+<br/><br/>
+  
 
 ### 스프링에 적용된 디자인 패턴
 1. 싱글톤 패턴: bean으로 관리되는 자바POJO 클래스는 모두 싱글톤임
 2. 프록시 패턴: Aop가 적용된 소스는 모두 프록시를 통해 적용됨.
-
-
