docs. garbage collector

--- a/_posts/2021-05-23-JVM.md
+++ b/_posts/2021-05-23-JVM.md
@@ -26,10 +26,13 @@ title:  "JVM"
 <br/><br/>
   
 ### heap 구분
-- young제너레이션
+- young제너레이션: 이 영역에서 객체가 사라질 때 minor GC가 발생한다고 함
     - eden: 객체 처음 생성됐을 때 할당
-    - survivor: 가비지컬렉션의 수집 대상에서 제외되었을 때 할당
-- old제너레이션: 가비지 컬렉션에서 자주 수집하지 않은 객체가 저장됨.
+    - survivor: 가비지컬렉션의 수집 대상에서 1번 제외되었을 때 할당
+- old제너레이션
+  - 가비지 컬렉션에서 자주 수집하지 않은 객체가 저장됨.
+  - 대부분 young영역보다 크게 할당함
+  - 크기가 큰 만큼 young보다는 gc가 적게 발생. 이 영역에서 발생하는 gc가 major gc(=full gc)
 - tenured제너레이션 : survivor보다 더 낮은 빈도의 가비지컬렉션 수집 대상
 - Metaspace(=PermGen)제너레이션: JVM에서 실행되는데 필요한 클래스정의, String상수
 <br/><br/>
@@ -50,5 +53,5 @@ title:  "JVM"
 ### 가비지 컬렉션 작동과정
 - mark-and-sweep: 가비지 컬렉션은 실행 중인 코드에서 참조하는 객체를 확인해 live로 표시함
 - 힙에 있는 객체들을 찾아 live가 아닌 메모리 위치에 메모리를 할당할 수 있게 함
-- stop-the-world: 재배치 시 JVM의 모든 스레드가 정지됨
+- stop-the-world: 재배치 시 JVM의 모든 스레드가 정지됨(GC튜닝이란 이 시간을 줄이는 것)
 * 따라서 System.gc를 직접 요청하는 것은 이롭지 않을 수 있다.
