--- a/_posts/2021-05-31-diary.md
+++ b/_posts/2021-05-31-diary.md
@@ -17,14 +17,14 @@ title:  "새로운 의지가 불타는 하루"
 그래도 간만에 의지가 다시금 불타오르는 것 같다..........
 
 
-1. Full GC VS Minor GC
-2. 다수 서버에서 세션 처리하기
-3. Transaction read only & propagration
-4. G1GC
-5. jvm warm up
-6. java instrument
-7. counting sort
-8. 로드밸런싱 종류
-9. spring cacheable
-10. servlet filter
-11. lazy init
+- ~~Full GC VS Minor GC~~
+- 다수 서버에서 세션 처리하기
+- Transaction read only & propagration
+- ~~G1GC~~
+- jvm warm up
+- java instrument
+- counting sort
+- 로드밸런싱 종류
+- spring cacheable
+- servlet filter
+- lazy init
