--- a/_posts/2021-05-31-diary.md
+++ b/_posts/2021-05-31-diary.md
@@ -25,6 +25,6 @@ title:  "새로운 의지가 불타는 하루"
 - java instrument
 - counting sort
 - 로드밸런싱 종류
-- spring cacheable
+- ~~spring cacheable~~
 - servlet filter
 - lazy init
