feat. java instrument

--- a/_posts/2021-05-31-diary.md
+++ b/_posts/2021-05-31-diary.md
@@ -22,7 +22,7 @@ title:  "새로운 의지가 불타는 하루"
 - ~~Transaction read only & propagration~~
 - ~~G1GC~~
 - jvm warm up
-- java instrument
+- ~~java instrument~~
 - counting sort
 - 로드밸런싱 종류
 - ~~spring cacheable~~
