--- a/_posts/2021-05-31-diary.md
+++ b/_posts/2021-05-31-diary.md
@@ -18,7 +18,7 @@ title:  "새로운 의지가 불타는 하루"
 
 
 - ~~Full GC VS Minor GC~~
-- 다수 서버에서 세션 처리하기
+- ~~다수 서버에서 세션 처리하기~~
 - ~~Transaction read only & propagration~~
 - ~~G1GC~~
 - jvm warm up
