--- a/_posts/2021-06-09-session.md
+++ b/_posts/2021-06-09-session.md
@@ -8,6 +8,9 @@ title:  "다중 서버환경의 세션 관리"
 - 따라서 http요청 간 연결하기 위해 세션을 사용
 - 클라이언트에는 session id를 전송하고, 실제 정보는 서버단에 저장함
 
+[[참조] 통신 프로토콜 POST](https://hyooi.github.io/communication-protocol/)
+
+
 
 # 다중 서버환경에서의 세션 관리
 
