docs. load balancer

--- a/_posts/2021-05-31-diary.md
+++ b/_posts/2021-05-31-diary.md
@@ -24,7 +24,7 @@ title:  "새로운 의지가 불타는 하루"
 - jvm warm up
 - ~~java instrument~~
 - counting sort
-- 로드밸런싱 종류
+- ~~로드밸런싱 종류~~
 - ~~spring cacheable~~
 - servlet filter
 - ~~lazy init~~
