docs. servlet filter

--- a/_posts/2021-05-31-diary.md
+++ b/_posts/2021-05-31-diary.md
@@ -26,5 +26,5 @@ title:  "새로운 의지가 불타는 하루"
 - counting sort
 - ~~로드밸런싱 종류~~
 - ~~spring cacheable~~
-- servlet filter
+- ~~servlet filter~~
 - ~~lazy init~~
