docs. sql index

--- a/_posts/2021-07-27-SQL_INDEX.md
+++ b/_posts/2021-07-27-SQL_INDEX.md
@@ -7,6 +7,7 @@ title:  "인덱스"
 - 데이터의 고유성을 확인하거나 검색 성능을 향상시키기 위해 사용하는 객체
 - 인덱스에 해당되는 컬럼의 데이터들을 정렬하여, 별도의 공간에 데이터의 물리적 주소(ROWID)와 함께 저장함
 
+
 ## 1-1. 사용 이유?
 - DB데이터를 빠르게 조회하기 위함
 
@@ -124,3 +125,66 @@ AND 급여코드 = '정기급여' --체크조건
 WHERE 급여연월 IN ('201601'..., '201612') --범위제한조건
 AND 급여코드 = '정기급여' --범위제한조건
 {% endhighlight %}
+
+<br/><br/>
+# 5. 인덱스 사용시 유의점
+## 5-1. INDEX SCAN < FULL SCAN
+- Index scan은 i/o한번에 하나의 데이터 block을 가져오지만(단일블록I/O), Full scan은 여러 개의 데이터 block을 가져온다. (멀티블록I/O)
+- 따라서 테이블의 분포도가 나쁜 경우 full scan이 더 바람직하다.
+
+
+## 5-2. 인덱스 사용이 불가한 경우
+- Not연산자의 사용
+- is null, is not null: 인덱스에서는 null을 저장하지 않기 때문
+- 옵티마이저의 취사선택: 잘못된 결정을 하는 것을 방지하기 위해 힌트를 사용함
+- external supressing: 인덱스 컬럼을 조작하는 경우(ex. substr, ||)
+- internal supressing
+  - 데이터 내부에 존재하는 supressing을 의미
+  - ex. number컬럼을 varchar와 비교하는 경우, 내부적으로 타입변환이 일어남(comm+'500', bonus>sal/'10')
+
+
+## 5-3. 인덱스가 두개 이상인 경우 우선순위
+1. 인덱스별로 인덱스 구성 컬럼 중 '='로 비교하는 컬럼 갯수가 많은 순
+2. 1번이 동일한 경우, 컬럼의 갯수가 많은 인덱스를 선택
+3. 2번이 동일한 경우, 최근에 생성한 인덱스를 사용
+- ex)
+```sql
+SELECT *
+FROM sales
+WHERE 부서 = '843'
+AND 기준일자 = '970518'
+AND 품목 = 'B023'
+```
+- 인덱스 변경 전
+  - IX1_SALES(부서+기준일자), IX2_SALES(품목)
+- 인덱스 변경 후
+  - IX1_SALES(부서+기준일자+**순번**), IX2_SALES(품목)
+- 위 케이스의 경우, IX1_SALES와 IX2_SALES의 '='로 비교하는 컬럼이 각각2/2, 1/1로 동일한 비율이었지만,
+IX_1_SALES에 순번이 추가되면서 2/3로 줄어들게되어 IX2_SALES가 사용된다.
+- 해당 순위는 RBO에 해당되는 케이스고, CBO인 경우엔 COST를 고려하여 결정한다.
+
+<br/><br/>
+# 6. 예시
+```sql
+-- PK: COURSE_CODE + YEAR + COURSE_SQ_NO
+
+-- 변경 전
+SELECT COURSE_CODE, NVL(SUM(DECODE(YEAR,'1999', DEPOSIT_AMOUNT)), 0) Y1999
+FROM EC_APPLY A
+WHERE COURSE_CODE < 1000
+AND YEAR BETWEEN '1999' AND '2002'
+GROUP BY COURSE_CODE
+
+-- 변경 후
+SELECT COURSE_CODE, NVL(SUM(DECODE(YEAR,'1999', DEPOSIT_AMOUNT)), 0) Y1999
+FROM (
+     SELECT COURSE_CODE, YEAR, SUM(DEPOSIT_AMOUNT)
+        FROM EC_APPLY
+        WHERE COURSE_CODE < 1000
+        AND YEAR BETWEEN '1999' AND '2002'
+        GROUP BY COURSE_CODE, YEAR
+       )
+GROUP BY COURSE_CODE
+```
+- 위와 같이 FROM절을 Sub query처리하게 되면, 함수처리 대상 row가 줄어들어 성능이 향상됨
+- 또한 분포도가 좋지 않은 경우, FULL SCAN힌트를 이용해 Full scan을 유도할 수도 있다.
