docs. sql hash j

--- a/_posts/2021-07-31-SQL_JOIN.md
+++ b/_posts/2021-07-31-SQL_JOIN.md
@@ -7,6 +7,7 @@ title:  "조인"
 - 두 개 이상의 테이블을 연결지어 수행하는 작업
 - 인덱스 다음으로 많은 SQL튜닝 원인을 제공함
 
+
 ## 1-1. Nested Loop Join
 - 드라이빙 테이블(=outer table)로 선정된 테이블로부터, where절에 정의된 검색조건을 만족하는 데이터들을 걸러낸 후,
 이 값들을 가지고 **조인 대상 테이블을 반복적으로 검색**해 최종 결과값을 얻어내는 방식
@@ -22,4 +23,50 @@ title:  "조인"
 - 힌트: order, leading
 - 뷰, supressing
 - 이 외에도 sql에서 조인순서를 변경할 수도 있음(cbo에서는 불가)
-- 
+
+
+## 2-1. Sort Merge Join
+- 연결고리에 인덱스가 없는 경우, 대용량 조인으로 랜덤 액세스의 오버헤드가 높은 경우 사용
+
+### 2-1-1. 원리
+1. 동시에 각 테이블의 데이터를 읽어들임
+2. 읽은 데이터 sorting
+3. 둘 중 하나가 sorting이 끝나더라도 둘다 끝날 때까지 기다린 후 조인 진행
+
+
+### 2-1-2. 튜닝 포인트
+1. 데이터 빨리 읽도록 할 것 -> 풀 스캔의 경우, 멀티블락 갯수를 늘리기도 함
+2. sorting을 빠르게 하도록
+
+
+### 2-1-3. sort merge join이 불리한 경우
+- a, b테이블의 데이터 분량이 차이가 많은 경우 불리함(sorting을 기다리므로)
+- 이런 경우, hash join이 유리할 수 있음
+
+## 3-1. Hash Join
+- Sort merge join처럼 테이블의 데이터를 각각 읽어오나, driving table이 있다.
+- driving table을 먼저 읽어 해시값을 만들어서 메모리에 올리며, 다른 테이블을 읽어 해당 해시값을 이용해 조인함
+
+### 3-1-1. 튜닝포인트
+1. 적은 양을 가진 테이블로 driving table을 결정(hash area size가 넉넉하면 큰 테이블을 먼저 읽기도 함)
+2. 각 테이블로부터 데이터를 빠르게 읽도록 할 것
+3. hash area size최적화(sort area size의 두 배임)
+
+
+### 3-1-2. hash join장단점
+- 해시값 저장 시 많은 메모리와 자원을 소모함
+- hash area size가 부족하면 디스크를 사용하기 때문에 디스크io가 발생하게 되는데,
+이 때 성능이 현저히 저하된다. hw가 넉넉하면 일반적으로 다른 조인보다 효율적이나, 불리하면 반대로 느려짐에 유의
+
+
+### 4. Catresian Join
+- where절이 없거나, 조인조건이 없는 조인 수행 시 사용
+- 데이터 복제 시 사용하나, 잘못 사용하는 경우 데이터가 부풀려져 비효율적임
+- 특별한 케이스에 사용
+  - ex. union all로 동일한 테이블을 반복 접근하는 경우, 데이터 형태를 변환하는 경우 등
+```sql
+SELECT E.emp_no, E.name, E.job_id, J.job_id, J.job_title
+FROM emp E, jobs J
+WHERE E.job_id = 'SA_REP';
+```
+
