--- a/_posts/2021-07-31-SQL_JOIN.md
+++ b/_posts/2021-07-31-SQL_JOIN.md
@@ -70,3 +70,41 @@ FROM emp E, jobs J
 WHERE E.job_id = 'SA_REP';
 ```
 
+
+## 3-1. 서브쿼리
+- 하나의 sql내에 존재하는 또 다른 select문
+- nested subquery, correlated subquery는 둘이 함께 사용하게 되면,
+  모두 main sql보다 늦게 실행되므로 속도down
+
+### 3-1-1. nested subquery
+- 서브쿼리가 메인sql보다 먼저 실행되어야 속도UP
+```sql
+SELECT empno, ename
+FROM emp
+WHERE **deptno** = ( --deptno에 인덱스가 있어야 서브쿼리 먼저 실행됨
+    SELECT deptno FROM dept WHERE dname = 'sales'
+  )
+```
+
+### 3-1-2. correlated subquery
+- 메인sql이 실행되면서 각각의 데이터가 서브쿼리를 반복 실행
+```sql
+SELECT ename, empno
+FROM emp
+WHERE exists (
+    SELECT 'X'
+    FROM dept
+    WHERE dept.deptno = **emp.deptno** --메인sql의 정보(emp.deptno)를 사용하므로 메인sql이 먼저 실행됨
+    AND dept.dname = 'sales'
+        )
+```
+
+
+### 3-1-3. scalar subquery
+- 함수와 같은 성격
+- 한 건만 리턴하고, 데이터가 없으면 null을 리턴함
+- 메인sql의 데이터를 이용하므로, 메인sql이 많으면 성능DOWN
+```sql
+SELECT e.ename, (SELECT d.dname FROM dept d WHERE d.deptno = e.deptno) as dname
+FROM emp e
+```
