--- a/_posts/2021-08-22-querydsl-5.0.0.md
+++ b/_posts/2021-08-22-querydsl-5.0.0.md
@@ -4,11 +4,12 @@ title:  "Query DSL 5.0.0 Gradle에 적용하기"
 ---
 
 # QueryDSL?
-- 타입세이프한 sql을 작성할 수 있도록 하는 자바 프레임워크
+- **타입세이프한 sql**을 작성할 수 있도록 하는 자바 프레임워크
 - jpa나 mongo db, 엘라스틱 서치에 사용되는 루신 등에 사용할 수 있다.
 - spring data jdbc 공식문서에 query dsl이 지원된다고 나와있으나, 실제로 적용해보면 에러가 떨어진다(..)
 - query dsl 5.0.0은 7월 22일에 정식 릴리즈되었으며, 아직 공식 웹페이지에 레퍼런스문서도 올라와있지 않은 상태이다.
 이번에 작업하면서 5.0.0을 적용해보게 되어 해당 내용을 포스팅한다.
+<br/>
 
 
 ## build.gradle
@@ -21,7 +22,7 @@ plugins {
 
 configurations {
     compileOnly {
-        **extendsFrom annotationProcessor**
+        extendsFrom annotationProcessor
     }
 }
 
@@ -31,10 +32,10 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    **implementation 'com.querydsl:querydsl-apt:5.0.0'
+    implementation 'com.querydsl:querydsl-apt:5.0.0'
     implementation 'com.querydsl:querydsl-jpa:5.0.0'
     implementation 'com.querydsl:querydsl-core:5.0.0'
-    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:general'**
+    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:general'
 }
 
 test {
@@ -43,7 +44,7 @@ test {
 
 {% endhighlight %}
 
-- Q클래스 생성을 위해 별도의 플러그인을 사용했던 예전 버전과는 달리, 최근엔 어노테이션 프로세서를 활용해 Q클래스를 생성하고 있다.
+- Q클래스 생성을 위해 별도의 플러그인을 사용했던 예전 버전과는 달리, 최근엔 **어노테이션 프로세서**를 활용해 Q클래스를 생성하고 있다.
 - 간단하게 querydsl-apt를 annotationProcessor로 달아주면 된다.
 - 그리고 디펜던시 중 querydsl-core 라이브러리를 4.4.0으로 들고오는 버그가 있어 5.0.0으로 디펜던시를 등록해주었다.
 <br/>
@@ -65,6 +66,7 @@ public class Person {
 기존과 동일하게 엔티티를 만들고 QueryEntity 어노테이션을 달아주면 된다.
 - 그리고 그래들 컴파일을 하게 되면 자동으로 JavaCompile할 때 Q클래스를 생성한다.
 - 생성된 Q클래스는 `build\generated\sources\annotationProcessor` 하위에 위치한다.
+<br/>
 
 
 ### 레파지토리
