docs. gitlab ssl3

--- a/_posts/2021-09-17-gitlab-ssl-1.md
+++ b/_posts/2021-09-17-gitlab-ssl-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "gitlab인증서 적용기1. Aws route53 서브도메인 발급"
+title:  "서버 인증서 적용기1. Aws route53 서브도메인 발급"
 categories:
 - git
 - aws
