--- a/_posts/2021-09-17-gitlab-ssl-2.md
+++ b/_posts/2021-09-17-gitlab-ssl-2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "gitlab인증서 적용기2. LetsEncrypt 인증서 발급하기"
+title:  "서버 인증서 적용기2. LetsEncrypt 인증서 발급하기"
 categories:
 - git
 tags:
