docs. gitlab ssl5

--- a/_posts/2021-09-17-gitlab-ssl-2.md
+++ b/_posts/2021-09-17-gitlab-ssl-2.md
@@ -2,10 +2,10 @@
 layout: post
 title:  "서버 인증서 적용기2. LetsEncrypt 인증서 발급하기"
 categories:
-- git
+- 서버
 tags:
-- letsencrypt
-- ssl
+- LetsEncrypt
+- SSL
 ---
 
 ### 1. 개요
