--- a/_posts/2021-09-17-gitlab-ssl-1.md
+++ b/_posts/2021-09-17-gitlab-ssl-1.md
@@ -2,10 +2,10 @@
 layout: post
 title:  "서버 인증서 적용기1. Aws route53 서브도메인 발급"
 categories:
-- git
-- aws
+- 서버
 tags:
-- route53
+- Aws route53
+- 서브도메인
 ---
 
 ### 1. 개요
