--- a/_posts/2021-01-16-jekyll-404.md
+++ b/_posts/2021-01-16-jekyll-404.md
@@ -1,36 +1,46 @@
 ---
 layout: post
 title:  "지킬로 제작한 Github page push시 404발생 현상"
-published: false
+categories:
+- Java
+tags:
+- github blog
+- jekyll
 ---
 
-### 개요
-처음 github page를 사용했을 때에는 기존 지킬 테마를 fork만 해서 올렸었는데, sitemap도 그렇고 커스터마이징하기에 불편함이 많아 결국 루비 및 지킬을 설치해서 사용하고 있다.
+### 1. 개요
+github 블로그는 보통 루비로 개발된 jekyll을 많이들 사용한다.
 
-~~루비 안쓰겠다고 난 커스터마이징 안할꺼야!~~ 했던 과거의 나를 반성...
+처음 루비를 그다지 사용하고 싶지 않았던 나는 기존 지킬 테마를 fork만 해서 올렸었는데, 
+sitemap 및 커스터마이징하기에 불편함이 많아 결국 루비 및 지킬을 설치해서 사용하고 있다.
 
-저처럼 지킬 안배우겠다고 포크해서 쓰실 분이 있다면 말립니다.. 
+루비 안쓰겠다고 ~~난 커스터마이징 안할꺼야!~~ 했던 과거의 나를 반성...
 
-결국 저처럼 돌아돌아 **루비**를 쓰시게 될거에요.
-
-
-<br/>
-### 404의 시작
-지킬의 경우 `bundle exec jekyll serve`로 로컬호스트 서버를 띄우게 되면, 알아서 소스 파일을 읽어들여 `_site`폴더에 정적 파일들을 생성해준다.
-
-또한 일반적으로 `_site`폴더는 깃 레파지토리에서 관리하지 않는데, 그것은 github가 알아서 소스를 빌드하여 페이지를 띄워주기 때문이다.
-
-그런데 분명 로컬에서 잘만 기동됐던 소스를 커밋했음에도 계속해서 **404**가 떴다.
-
+나같은 사람이 또 있지 않기를...ㅎㅎ(그럴거면 티스토리 쓰는 편이 나음)
 
 <br/>
-### 해결!
+
+### 2. 공포의 404
+지킬 블로그를 로컬에서 기동하고 싶을 땐, <var>bundle exec jekyll serve</var>
+를 사용하게 된다.
+
+그러면 알아서 소스 파일을 읽어들여 **_site디렉토리에 정적 파일들을 생성**해준다.
+
+또한 해당 <var>_site</var>폴더는 깃 레파지토리에서 관리하지 않는데, 그것은 github가 알아서 소스를 빌드하여 페이지를 띄워주기 때문이다.
+
+그런데 분명 로컬에서 잘만 기동됐던 소스를 커밋했음에도 계속해서 [블로그](https://hyooi.github.io)에는 **404**가 떴다.
+
+<br/>
+
+### 3. 해결!
 찾아보니 알고보는 어이없는 이유^^;
 
-github page는 기본적으로 master브랜치에 있어야만 페이지를 정상적으로 로딩한다.
-github setting에서 소스 브랜치를 다른 브랜치로 바꿔도 안된다. 무조건 master브랜치에 소스가 있어야만 한다.
+github page는 기본적으로 **master브랜치에 있어야만 페이지를 정상적으로 로딩**한다.
 
-무조건 아래 캡쳐와 같은 상태여야한다는 얘기.
+github setting에서 소스 브랜치를 다른 브랜치로 변경할 수도 있는데,
+난 이렇게해도 계속해서 **공포의 404**가 발생했다.
+
+무조건 레파지토리의 <var>Settings > Pages</var>가 아래 캡쳐와 같은 상태여야한다는 얘기.
 ![github_page_setting](/assets/images/github_page_setting.PNG)
 
 
@@ -38,7 +48,8 @@ github setting에서 소스 브랜치를 다른 브랜치로 바꿔도 안된다
 거기에 main브랜치로 푸시하도록 되어있는걸 그대로 따라했다가 발생한 문제였던 것..ㅎㅎ
 
 
-### Jekyll docs
+### 4. 결론
+사실 해당 내용은 [Jekyll docs](http://jekyllrb-ko.github.io/docs/github-pages/)에 안내되어 있다.
 > 저장소의 **master** 브랜치를 가지고 GitHub Pages 사이트를 구성하고 게시하기 때문에, 반드시 해당 브랜치에 Jekyll 사이트 컨텐츠를 저장하세요.
 
-해당 내용은 [Jekyll docs](http://jekyllrb-ko.github.io/docs/github-pages/)에 안내되어있다.
+항상 공식 문서를 잘 읽자는 교훈을 한번 더 깨닫고 가게 되었다(...)
