docs. letsencrypt update

--- a/_posts/2021-09-17-gitlab-ssl-2.md
+++ b/_posts/2021-09-17-gitlab-ssl-2.md
@@ -95,3 +95,32 @@ certbot renew --dry-run
 나와 같은 삽질을 해야하는 사람이나, 내용을 금방 잊어버릴 미래의 나를 위해 해당 내용을 정리한다.
 
 nginx 리버스 프록시 관련 내용은 [다음 챕터](/git/nginx/2021/09/17/gitlab-ssl-3.html)에서 설명할 예정이다.
+
+<br/>
+
+### 4. 일부PC Lets encrypt 접속불가(2021.10.01추가)
+#### 4.1. 원인
+[Lets Encrypt문서](https://letsencrypt.org/ko/docs/dst-root-ca-x3-expiration-september-2021/)에 따라,
+2021.09.30을 끝으로 구형 브라우저 및 기기에서 사용되던 ROOT인증서인 **DST Root CA X3**가 만료되었다.
+
+최신 브라우저에는 **ISRG Root X1**이라는 루트 인증서를 자체적으로 가지고 있으므로 문제가 없으나,
+구 기기(ex. iphone4)를 사용하는 사람들에게는 문제가 생길 수 있다는 것이다.
+
+그런데 10월 1일에 갑작스럽게 집pc로는 gitlab이 접속이 안됐다. (내 pc가 구 기기였던 것으로ㅎ)
+
+http로도 접속 가능하게 해뒀었다면 상관없었겠지만, 무조건 https로만 접속가능하도록 했던 나는 그게 불가능했다.
+
+<br/>
+
+#### 4.2. 해결
+윈도우 업데이트하고 크롬을 업데이트하고 난리를 쳤는데도 안돼서 알아봤더니 레지스트리를 편집해줘야 했다.
+
+window는 자동으로 루트 인증서를 업데이트하는데, 종종 <ins>설치한 프로그램에 의해 해당 기능이 비활성화</ins> 될 때가 있다고 한다.
+
+결국 아래 설정을 수정한 후 PC를 재기동하니 정상적으로 접속되는 것을 확인할 수 있었다.
+2. 시작 > Windows 관리 도구 > 레지스트리 편집기(혹은 윈도우+R > regedit)
+3. HKEY_LOCAL_MACHINE\SOFTWARE\Policies\Microsoft\SystemCertificates\AuthRoot
+4. **DisableRootAutoUpdate**을 0으로 변경
+
+설정 변경 후, 브라우저에서 인증서를 확인해보면 이렇게 최상위 인증서가 ISRG ROOT X1인 것을 확인할 수 있다.
+![isrg-root-x1](/assets/images/certificate.png)
