--- a/_posts/2021-10-13-spring-404.md
+++ b/_posts/2021-10-13-spring-404.md
@@ -113,21 +113,25 @@ menuController와 마찬가지로 **DefaultSingleBeanRegistry**에서 빈을 생
 #### 3.1. 프록시 메커니즘
 Spring AOP는 Jdk dynamic proxy 혹은 Cglib를 사용해 타겟 오브젝트에 대한 프록시를 생성한다.
 
-Jdk dynamic proxy는 jdk에 기본적으로 내장되어 있는 반면, Cglib는 별도의 오픈소스로 구현되어 있으며 이는 Spring core에 포함되어 있다.
+Jdk dynamic proxy는 jdk에 기본적으로 내장되어 있는 반면, Cglib는 별도의 오픈소스로 구현되어 있으며 
+이는 Spring 3.2부터 spring core jar에 포함되어 있다.
 
 만약 오브젝트가 하나 이상의 인터페이스를 구현했다면 Jdk dynamic proxy를 사용하며,
-인터페이스를 구현하지 않았다면 Cglib proxy를 사용한다. ([Proxing Mechanisms](https://docs.spring.
-io/spring-framework/docs/current/reference/html/core.html#aop-choosing))
+인터페이스를 구현하지 않았다면 Cglib proxy를 사용한다. 
+- 관련문서
+    - [Proxing Mechanisms](https://docs.spring.io/spring-framework/docs/current/reference/html/core.html#aop-proxying)
+    - [Jdk and Cglib based proxies](https://docs.spring.io/spring-framework/docs/current/reference/html/core.html#aop-pfb-proxy-types)
 
 ![after-proxy.png](/assets/images/after-proxy.png)
 
-결론적으로 Jdk dynamic proxy 혹은 Cglib proxy 모두 위와 같은 방식으로 요청이 되는 것이다.
+결론적으로 Jdk dynamic proxy 혹은 Cglib proxy 모두 위와 같은 방식으로 요청이 되며,
+성능 차이는 거의 없다고 스프링 측에서는 설명하고 있다.
 
 <var>pojo.foo()</var>를 요청했을 때, 바로 요청하는 것이 아니라 Proxy가 대신 <var>pojo.foo()</var>를 요청하면서
 foo메소드가 실행되기 전후로 작업하고 싶은 기능을 추가할 수 있다.
 > 단, Jdk dynamic proxy로 생성된 오브젝트는 사용 시에 인터페이스를 이용해 사용해야한다.
 > 마찬가지로 DI도 인터페이스로 타입을 지정해 주입받지 않으면 DI시 실패하게 된다.
- 
+
 <br/>
 
 #### 3.2. 그래서 프록시가 404랑 무슨 상관이지?
@@ -147,16 +151,18 @@ Spring mvc는 모든 api의 요청/응답을 Dispatcher servlet를 통해 처리
 
 ### 4. 해결
 따라서 해결책은 Jdk dynamic proxy대신 Cglib proxy를 사용하도록 강제하는 데에 있었다.
+
+아래의 방법으로 인터페이스를 구현한 경우에도 Cglib proxy를 사용하도록 설정해줄 수 있다.
 난 4.2의 방법으로 해결할 수 있었다.
 
-#### 4.1. Aop pointcut설정에 Cglib설정
+#### 4.1. Aop설정 변경
 ```xml
 <aop:config proxy-target-class="true">
     <!-- other beans defined here... -->
 </aop:config>
 ```
 
-#### 4.2. 자동 프록시 설정 시 Cglib강제 설정
+#### 4.2. Aspectj 자동 프록시를 사용하는 경우
 ```xml
 <aop:aspectj-autoproxy proxy-target-class="true"/>
 ```
