--- a/_posts/2021-10-18-gitlab-500.md
+++ b/_posts/2021-10-18-gitlab-500.md
@@ -75,4 +75,6 @@ Root계정으로 접속한 후,
 <var>Admin Area > Settings > Metrics and profiling > Metrics - Prometheus</var>에서
 아래와 같이 프로메테우스 메트릭을 비활성화한다.
 
+비활성화 후에는 gitlab을 재기동시켜주어야 한다.
+
 ![grafana.png](/assets/images/prometheus_disable.png)
