--- a/_posts/2021-02-17-til.md
+++ b/_posts/2021-02-17-til.md
@@ -1,32 +1,33 @@
 ---
 layout: post
 title:  "6주차 일일커밋, TIL후기"
-published: false
+tags:
+- diary
 ---
 
-### 오늘따라 공부하기 싫어서 쓰는 일일커밋&TIL후기
+### 1. 오늘따라 공부하기 싫어서 쓰는 일일커밋&TIL후기
 하도 여기저기 얘기하고 다녀서 내 주변 아는 분들은 모두 아실 얘기인데, 최근 **일일커밋**을 진행하고 있다.
 
 나름 6주차에 접어드니 이제는 하루라도 안하면 죄책감이 들어서, (누구에게 잘못한건지는 모르겠지만) 커밋을 위해서라도 매일 컴퓨터 앞에 앉고있다.
 
 심지어 약속이 있어 커밋하기 어려울 것 같은 날이면 새벽에도 미리 커밋을 하고있다. ~~거의 커밋의 노예~~
-<br/><br/>
 
+<br/>
 
-### 일일커밋? TIL?
+### 2. 일일커밋? TIL?
 먼저 일일커밋은 말그대로 **매일 커밋**하는 것을 말한다.
 
 일일커밋은 반드시 업무와 관련이 없어야하고, 블로그 작성과 같은 커밋은 제외되어야 한다고 하는데,
 난 가끔 공부하기 싫은 날이면 블로그도 포함한다.. ^^; 몰라 매일 뭐라도 하는게 어디야....
 
-
 그리고 TIL은 **Today I Learned**의 줄임말이다. 
 
 TIL프로젝트는 github에 검색하면 엄청나게 많이 나온다. 몇년 간을 거의 매일 커밋한 사람들도 종종 보는데,
 그런 개발자들을 보고있노라면 내가 고용주라도 채용하고 싶겠다 하는 생각이 든다.
-<br/><br/>
 
-### 첫 시작
+<br/>
+
+### 3. 첫 시작
 첫 시작은 우연히 T아카데미에서 GIT관련 강의를 듣고 난 후였다.
 
 수강시간도 짧고 갯수도 몇개 안되는데다, 무엇보다 **무료**고 아는 내용이 많아보여서 그냥 한번 켜놓기나 하자 싶었는데,
@@ -42,27 +43,30 @@ TIL프로젝트는 github에 검색하면 엄청나게 많이 나온다. 몇년 
 
 그렇게 해서 매일 새싹이 돋고 있는 내 깃허브!
 ![TIL](/assets/images/til.PNG)
+
 <br/>
 
-### 장점!
+#### 3.1. 장점!
 - 의지박약인 나는 공부하고 싶던 것들을 적어두기만 하고 실제로 실행은 하지 않았던 것들이 많았는데, <br/>
   커밋을 위해서라도 기존 공부하고 싶었던 것들을 하나하나 퀘스트 깨듯 진행하고 있다.
 - 업무 혹은 다른 일을 하다가도 확인하고 싶은 게 생기면, 내 깃허브 레파지토리를 확인하면 된다. <br/>
   내가 작성한거라 그런지 어 이거 어디 커밋했었는데! 하고 쉽게 기억이 난다.
 - 죽어있던 내 깃허브 계정이 파릇파릇해졌다. 매일 잔디심는 재미에도 하게되는 것 같다.
 - 스스로 뿌듯해짐
-<br/><br/>
+
+<br/>
   
-### 단점?
+#### 3.2. 단점?
 - 하루라도 안하면 이제는 죄책감이 든다. ㅋㅋ<br/>
   지금이야 재택근무도 하고 해서 커밋하기가 쉽지만, 출근하기 시작하고 나서도 매일 이렇게 할 수 있을지가 의문이다. 
   평생 할 수는 없는 노릇인데ㅎㅎㅎ
-<br/><br/>
 
+<br/>
 
-### 결론
-그럼에도 불구하고 추천. <br/>
-주변 사람들에게 널리 퍼뜨리는 것을 추천. <br/>
+### 4. 결론
+그럼에도 불구하고 추천.
+
+주변 사람들에게 널리 퍼뜨리는 것을 추천.
 
 애자일 원칙 중 하나가 **동기부여**인데, 일일커밋과 TIL을 실천함으로써 스스로에게 동기부여가 되고,
 주변 사람들도 같이 하게되면 그것 또한 동기부여가 된다.
